# gtk-packager-rs

./: Cargo.toml  README.md
.github/: CI.yml
.github/workflows/: CI.yml
msys2/: Cargo.toml
msys2-gtk-packager/: Cargo.toml  README.md
msys2-gtk-packager/reference/: msys2_to_windows.rs  package.py  which.rs
msys2-gtk-packager/src/: commands.rs  main.rs  packager.rs  util.rs
msys2-gtk-packager/src/commands/: build.rs  package.rs  run.rs
msys2-gtk-packager/src/util/: ldd.rs
msys2-packager/: Cargo.toml
msys2-packager/src/: lib.rs  main.rs  packager.rs  util.rs
msys2/src/: lib.rs
