[package]
name = "msys2-packager"
version = "0.0.0"
edition = "2021"

[[bin]]
name = "msys2-packager"
path = "src/main.rs"
required-features = [ "cli" ]

[dependencies]
anyhow = "1.0.69"
argh = { version = "0.1.10", optional = true }
bitflags = "1.3.2"
camino = "1.1.4"
goblin = { version = "0.6.1", features = [ "std", "pe32", "pe64", "endian_fd" ], default-features = false }
msys2 = { path = "../msys2" }

[features]
cli = [ "argh" ]
